--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.1.0",
     "bootstrap": "^5.0.0-beta3",
     "ng-drag-drop": "^5.0.0",
+    "ng2-dragula": "^2.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
